--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">StudyProject</string>
+    <string name="app_name">Nachoos</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_movie_detail">movieDetailActivity</string>
+    <string name="title_activity_movie_detail">Movie details</string>
 </resources>
