--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
     <string name="app_name">Nachoos</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_movie_detail">Movie details</string>
+    <string name="activity_movie_detail">Movie details</string>
+    <string name="settings_activity_label">Settings</string>
 </resources>
