--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,11 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="activity_movie_detail">Movie details</string>
+    <string name="pref_nickname_label">Your nickname</string>
+    <string name="pref_nickname">nickname</string>
+    <string name="pref_nickname_default">Fool</string>
+    <string name="action_refresh">Refresh</string>
     <string name="settings_activity_label">Settings</string>
+
+
 </resources>
